--- a/html/match.ejs
+++ b/html/match.ejs
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/match.css" />
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+    </style>
+    <title>Match</title>
   </head>
   <body>
-    <div>
-      <p><%=match.info.gameDuration%></p>
-    </div>
+    <div id="root"></div>
   </body>
 </html>
