--- a/html/match.ejs
+++ b/html/match.ejs
@@ -15,6 +15,23 @@
     <title>Match</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div>
+        <header id="header">
+          <div></div>
+          <div></div>
+          <div>
+            <p></p>
+            <p></p>
+          </div>
+          <div></div>
+          <div></div>
+        </header>
+        <main>
+          <div id="game_stats"> </div>
+          <div></div>
+        </main>
+      </div>
+    </div>
   </body>
 </html>
