--- a/html/match.ejs
+++ b/html/match.ejs
@@ -28,8 +28,69 @@
           <div></div>
         </header>
         <main>
-          <div id="game_stats"> </div>
-          <div></div>
+          <div id="game_stats">
+            <div>
+              <div><p></p></div>
+              <div></div>
+              <div><p></p></div>
+            </div>
+            <div>
+              <div>
+                <div>11</div>
+                <div>KDA</div>
+                <div>22</div>
+              </div>
+              <div>
+                <div>11</div>
+                <div>GOLD</div>
+                <div>22</div>
+              </div>
+              <div>
+                <div>11</div>
+                <div>TOWERS</div>
+                <div>22</div>
+              </div>
+              <div>
+                <div>11</div>
+                <div>HERALDS</div>
+                <div>22</div>
+              </div>
+              <div>
+                <div></div>
+                <div>DRAKES</div>
+                <div></div>
+              </div>
+              <div>
+                <div></div>
+                <div>ELDERS</div>
+                <div></div>
+              </div>
+              <div>
+                <div></div>
+                <div>BARONS</div>
+                <div></div>
+              </div>
+              <div>
+                <div>
+                  <%for(let i=0;i<5;i++){%>
+                  <img src="" onerror="this.style.display='none'" />
+                  <%}%>
+                </div>
+                <div>BANS</div>
+                <div>
+                  <%for(let i=0;i<5;i++){%>
+                  <img src="" onerror="this.style.display='none'" />
+                  <%}%>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div>TOTAL DAMAGE DEALT</div>
+            <div id="deal"></div>
+            <div>GOLD DIFFERENCE</div>
+            <div></div>
+          </div>
         </main>
       </div>
     </div>
